# shadowsocks-face

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  ss-face.desktop  ss-face.pro  ss-qtw.desktop  ss-qtw.pro
install/: ss-face.desktop
platform/windows/: res.rc
res/: res.qrc
res/i18n/: zh_CN.qm  zh_CN.ts
res/translations/: zh_CN.qm  zh_CN.ts
src/: common.hpp  editdialog.cpp  editdialog.h  editdialog.ui  global.h  imagewidget.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  pch.h  pch.hpp  res.qrc  sharedialog.cpp  sharedialog.h  sharedialog.ui  singleinstance.cpp  singleinstance.h  ssconfigstorage.cpp  ssconfigstorage.h  ssprocesslist.cpp  ssprocesslist.h  version.h
src/app/: global.cpp  global.h  main.cpp  version.h
src/data/: configmanager.cpp  configmanager.h
src/data/dao/: KeyValueDAO.h  SSConfigDAO.h
src/data/entity/: SSConfig.h  SSConnection.h
src/data/file/: LocalFiles.h
src/data/model/: ConfigModel.h  ConnectionModel.h
src/entity/: SSConfig.h
src/manager/: configmanager.cpp  configmanager.h  processmanager.cpp  processmanager.h
src/model/: ConnectionModel.h  config.cpp  config.h  ssconfig.cpp  ssconfig.h
src/net/: latencytester.h
src/qrlib/: qrcode.c  qreasy.h
src/res/: res.qrc
src/res/translations/: zh_CN.qm  zh_CN.ts
src/sspm/: processmanager.cpp  processmanager.h  sspm.cpp  sspm.h
src/tools/: ProxyLatencyTester.h  QRMat.h  QRMatrix.h  SingleInstanceDoorbell.h  latencytester.cpp  latencytester.h  onceguard.cpp  onceguard.h  qreasy.cpp  qreasy.h  singleinstance.cpp  singleinstance.h
src/translations/: zh_CN.qm  zh_CN.ts
src/ui/: EditDialog.cpp  EditDialog.h  EditDialog.ui  MainWindow.cpp  MainWindow.h  MainWindow.ui  SettingsDialog.cpp  SettingsDialog.h  SettingsDialog.ui  ShareDialog.cpp  ShareDialog.h  ShareDialog.ui  editdialog.cpp  editdialog.h  imagewidget.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  sharedialog.cpp  sharedialog.h  sharedialog.ui
src/ui/custom/: imagewidget.h
src/ui/custom_widgets/: ScalableImageWidget.h
